--- a/NestJS/nest-pokedex/docker-compose.yaml
+++ b/NestJS/nest-pokedex/docker-compose.yaml
@@ -1,9 +1,29 @@
-
+#docker compose -f docker-compose.yaml --env-file .env up -d
 version: '3'
 
 services:
+  pokedexapp:
+    depends_on:
+      - db
+    build: 
+      context: .
+      dockerfile: Dockerfile-dev
+    image: pokedex-docker
+    container_name: pokedexapp
+    restart: always # reiniciar el contenedor si se detiene
+    ports:
+      - "${PORT}:${PORT}"
+    # working_dir: /var/www/pokedex
+    environment:
+      MONGODB: ${MONGODB}
+      PORT: ${PORT}
+      DEFAULT_LIMIT: ${DEFAULT_LIMIT}
+    volumes:
+      - ./:/var/www/pokedex
+
   db:
     image: mongo:5
+    container_name: mongo-poke
     restart: always
     ports:
       - 27017:27017
